# oop-laborator

./: CMakeLists.txt  OOP.cbp  elevi.in  main.cpp  note.in
headers/: Absence.h  Exception.h  Grade.h  Menu.h  Student.h  headers.h  mark.h
source files/: Absence.cpp  Exception.cpp  Grade.cpp  Menu.cpp  Student.cpp  mark.cpp
